# time-series-labeling

./: .dockerignore  .gitignore  CHANGELOG.md  QUICK_START.md  README.dev.md  README.md  build-and-push.sh  command  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  init-mongo.js  prompt_template.py
.github/workflows/: production.yml
docs/: LARGE_DATASET_OPTIMIZATION_PLAN.md
hill_backend/: Dockerfile  README.md  REFACTORING_SUMMARY.md  chatbot.py  config.py  database.py  main.py  model.py  models.py  pyproject.toml  requirements.txt  websocket_handlers.py
hill_backend/agents/: __init__.py
hill_backend/agents/auto_detect/: __init__.py  coordinator.py  identifier.py  planner.py  prompts.py  tools.py  utils.py  validator.py
hill_backend/agents/chat/: agent.py
hill_backend/auto_detection/: multi_agent.py  planner_agent.py  tools.py
hill_backend/deprecated/: docker-compose.yaml  main_flask.py  mongodb_listen.py  tornado_app.py  utils.py
hill_backend/routes/: chat_conversations.py  detection_conversations.py  files.py  labels.py  projects.py  templates.py  window_indicator.py
hill_backend/services/: __init__.py  data_reader.py  resampler.py
hill_backend/ws_handlers/: auto_detect.py  chat.py
hill_backend_v1.5/: .gitignore  REDIS_INTEGRATION.md  config.py  main.py  pyproject.toml  redis_client.py
hill_backend_v1.5/agents/auto_detect/: coordinator.py
hill_backend_v1.5/agents/chat/: __init__.py  agent.py
hill_backend_v1.5/routes/: __init__.py  chat_conversations.py  files.py  folders.py  projects.py  templates.py  users.py
hill_backend_v1.5/websockets/: __init__.py  chat.py
hill_backend_v2/: .gitignore  ARCHITECTURE.md  Dockerfile  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  env.example  main.py  pyproject.toml
hill_backend_v2/app/: __init__.py
hill_backend_v2/app/api/: __init__.py  dependencies.py
hill_backend_v2/app/api/routes/: download.py  files.py  folders.py  labels.py  projects.py  templates.py  users.py  websockets.py
hill_backend_v2/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
hill_backend_v2/app/models/: __init__.py  schemas.py
hill_backend_v2/app/repositories/: __init__.py  base.py  conversation.py  file.py  folder.py  label.py  project.py  template.py  user.py
hill_backend_v2/app/services/: chatbot.py  download.py  extraction.py  file.py  folder.py  label.py  project.py  template.py  user.py
hill_backend_v2/app/services/auto_detection/: __init__.py  datamodels.py  identifier_agent.py  prompt_template.py  validator_agent.py
hill_frontend/: .firebaserc  .gitignore  Dockerfile  README.md  angular.json  firebase.json  nginx.conf  package-lock.json  package.json
hill_frontend/src/: index.html  styles.scss
hill_frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  model.ts
hill_frontend/src/environments/: environment.development.ts  environment.prod.ts  environment.ts  (+1 more)
hill_frontend_v1.5/: README.md  angular.json  package-lock.json  package.json
hill_frontend_v1.5/src/: index.html  styles.scss
hill_workers/: .gitignore  Dockerfile  README.md  REFACTORING_SUMMARY.md  config.py  database.py  main.py  parsing.py  pyproject.toml  redis_client.py  requirements.txt
hill_workers/workers/: __init__.py  file_parser.py
hill_workers_v1.5/: Dockerfile  README.md  config.py
hill_workers_v1.5/workers/: file_parser.py
scripts/: start-dev-backend.sh  start-dev-db.sh  start-dev-frontend.sh  start-dev-worker.sh  stop-dev-db.sh  sync-prod-to-dev.sh
user_manual/: USER_MANUAL.md  generate_pdf.py
(+181 files in other folders)
