[project]
name = "hill-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "cffi>=1.17.1",
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "dnspython>=2.7.0",
    "exceptiongroup>=1.3.0",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "idna>=3.10",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pymongo>=4.14.0",
    "pyopenssl>=25.1.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "simplejson>=3.20.1",
    "sniffio>=1.3.1",
    "starlette>=0.47.2",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]
