[project]
name = "hill-workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.7.0",
    "et-xmlfile>=2.0.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "simplejson>=3.20.1",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "xlrd>=2.0.2",
]
