[project]
name = "hill-workers"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "simplejson>=3.20.2",
    "tsdownsample>=0.1.3",
    "xlrd>=2.0.2",
]
